Minor: Running evaluation for TimeBound on SSv2

--- a/InternVideo2/multi_modality/demo/demo.ipynb
+++ b/InternVideo2/multi_modality/demo/demo.ipynb
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-06-06 18:17:20,400] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+      "[2024-06-08 23:04:38,001] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
      ]
     }
    ],
@@ -53,9 +53,11 @@
     "from config import (Config,\n",
     "                    eval_dict_leaf)\n",
     "\n",
-    "from demo_utils import (retrieve_text,\n",
-    "                  _frame_from_video,\n",
-    "                  setup_internvideo2)"
+    "from demo_utils import (\n",
+    "    retrieve_text,\n",
+    "    _frame_from_video,\n",
+    "    setup_internvideo2,\n",
+    ")"
    ]
   },
   {
@@ -98,22 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_pth = '/work/piyush/pretrained_checkpoints/LargeModels/InternVideo/1B_clip.pth'\n",
-    "config['pretrained_path'] = model_pth"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_pth = \"/work/piyush/pretrained_checkpoints/LargeModels/InternVideo/InternVideo2-stage2_1b-224p-f4.pt\"\n",
-    "config[\"model\"][\"vision_encoder\"][\"pretrained\"] = model_pth"
+    "# model_pth = '/work/piyush/pretrained_checkpoints/LargeModels/InternVideo/1B_clip.pth'\n",
+    "# config['pretrained_path'] = model_pth"
    ]
   },
   {
@@ -122,20 +114,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config['TextEncoders']['bert_large']['config'] = \"../configs/config_bert_large.json\""
+    "ckpt_root = \"/work/piyush/pretrained_checkpoints/LargeModels/InternVideo/\"\n",
+    "model_pth = os.path.join(ckpt_root, \"InternVideo2-stage2_1b-224p-f4.pt\")\n",
+    "assert os.path.exists(model_pth)\n",
+    "config[\"model\"][\"vision_encoder\"][\"pretrained\"] = model_pth"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "repo_path = os.path.dirname(os.path.abspath(\".\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_encoder_config_path = os.path.join(repo_path, \"configs/config_bert_large.json\")\n",
+    "assert os.path.exists(text_encoder_config_path)\n",
+    "config['TextEncoders']['bert_large']['config'] = text_encoder_config_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_params(model):\n",
+    "    n = np.sum([p.numel() for p in model.parameters()]) / 1e6\n",
+    "    print(f\"Number of parameters in {type(model).__name__}: {np.round(n, 3)}M\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/users/piyush/install/miniconda3/envs/vl/lib/python3.9/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
+      "Loading pretrained weights from /work/piyush/pretrained_checkpoints/LargeModels/InternVideo/InternVideo2-stage2_1b-224p-f4.pt\n"
      ]
     }
    ],
@@ -145,7 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of parameters in InternVideo2_Stage2: 1410.144M\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_params(intern_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -160,11 +202,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: A man in a gray hat and coat walks through the snowy yard, carefully navigating around the trees. ~ prob: 0.6464\n",
-      "text: A person in a blue jacket walks their pet on a leash, enjoying a peaceful winter walk among the trees. ~ prob: 0.1907\n",
-      "text: A man in a gray sweater plays fetch with his dog in the snowy yard, throwing a toy and watching it run. ~ prob: 0.0718\n",
-      "text: A person bundled up in a blanket walks through the snowy landscape, enjoying the serene winter scenery. ~ prob: 0.0431\n",
-      "text: A man in a gray coat walks through the snowy landscape, pulling a sleigh loaded with toys. ~ prob: 0.0317\n"
+      "text: A man in a gray coat walks through the snowy landscape, pulling a sleigh loaded with toys. ~ prob: 0.6447\n",
+      "text: A person dressed in a blue jacket shovels the snow-covered pavement outside their house. ~ prob: 0.2909\n",
+      "text: A playful dog slides down a snowy hill, wagging its tail with delight. ~ prob: 0.0346\n",
+      "text: A person in a blue jacket walks their pet on a leash, enjoying a peaceful winter walk among the trees. ~ prob: 0.0093\n",
+      "text: A person stands on the snowy floor, pushing a sled loaded with blankets, preparing for a fun-filled ride. ~ prob: 0.0063\n"
      ]
     }
    ],
@@ -177,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,15 +242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: Someone is unfolding a paper. ~ prob: 0.7811\n",
-      "text: Someone is folding a paper. ~ prob: 0.2189\n"
+      "text: Someone is folding a paper. ~ prob: 0.7285\n",
+      "text: Someone is unfolding a paper. ~ prob: 0.2715\n"
      ]
     }
    ],
