--- a/InternVideo2/multi_modality/demo/demo.ipynb
+++ b/InternVideo2/multi_modality/demo/demo.ipynb
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-06-08 23:04:38,001] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+      "[2024-06-09 16:46:57,849] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/users/piyush/install/miniconda3/envs/vl/lib/python3.9/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +199,192 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "569"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_keys = list(intern_model.vision_encoder.state_dict().keys())\n",
+    "len(model_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clip_ppt_ckpt = '/work/piyush/pretrained_checkpoints/LargeModels/InternVideo/1B_clip.pth'\n",
+    "clip_ppt_ckpt = torch.load(clip_ppt_ckpt)\n",
+    "# clip_ppt_ckpt = {k.replace(\"vision_encoder.\"): v for k, v in clip_ppt_ckpt.items()}\n",
+    "ckpt_keys = list(clip_ppt_ckpt.keys())\n",
+    "len(ckpt_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['temp',\n",
+       " 'vision_encoder.clip_projector.norm1_q.weight',\n",
+       " 'vision_encoder.clip_projector.norm1_q.bias',\n",
+       " 'vision_encoder.clip_projector.norm1_k.weight',\n",
+       " 'vision_encoder.clip_projector.norm1_k.bias',\n",
+       " 'vision_encoder.clip_projector.norm1_v.weight',\n",
+       " 'vision_encoder.clip_projector.norm1_v.bias',\n",
+       " 'vision_encoder.clip_projector.cross_attn.q_bias',\n",
+       " 'vision_encoder.clip_projector.cross_attn.k_bias',\n",
+       " 'vision_encoder.clip_projector.cross_attn.v_bias']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ckpt_keys[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = intern_model.load_state_dict(clip_ppt_ckpt, strict=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1006, 33, 1020)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(msg.missing_keys), len(msg.unexpected_keys), len(intern_model.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__class_getitem__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__slots__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '_asdict',\n",
+       " '_field_defaults',\n",
+       " '_fields',\n",
+       " '_make',\n",
+       " '_replace',\n",
+       " 'count',\n",
+       " 'index',\n",
+       " 'missing_keys',\n",
+       " 'unexpected_keys']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(ckpt_keys).intersection(set(model_keys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -202,11 +396,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: A man in a gray coat walks through the snowy landscape, pulling a sleigh loaded with toys. ~ prob: 0.6447\n",
-      "text: A person dressed in a blue jacket shovels the snow-covered pavement outside their house. ~ prob: 0.2909\n",
-      "text: A playful dog slides down a snowy hill, wagging its tail with delight. ~ prob: 0.0346\n",
-      "text: A person in a blue jacket walks their pet on a leash, enjoying a peaceful winter walk among the trees. ~ prob: 0.0093\n",
-      "text: A person stands on the snowy floor, pushing a sled loaded with blankets, preparing for a fun-filled ride. ~ prob: 0.0063\n"
+      "text: A playful dog slides down a snowy hill, wagging its tail with delight. ~ prob: 0.2822\n",
+      "text: A man in a gray sweater plays fetch with his dog in the snowy yard, throwing a toy and watching it run. ~ prob: 0.2673\n",
+      "text: A person in a blue jacket walks their pet on a leash, enjoying a peaceful winter walk among the trees. ~ prob: 0.2297\n",
+      "text: A pet dog excitedly runs through the snowy yard, chasing a toy thrown by its owner. ~ prob: 0.1814\n",
+      "text: A playful dog and its owner wrestle in the snowy yard, chasing each other with joyous abandon. ~ prob: 0.0197\n"
      ]
     }
    ],
